--- a/hr_late_entry_rule.html
+++ b/hr_late_entry_rule.html
@@ -311,8 +311,8 @@
                 </div>
 
                 <div class="container-fluid">
-                    <div class="card">
-                        <div class="card-body">
+                    <div class="card project-box">
+                        <div class="card-body border">
                             <div class="row pb-2 border-bottom">
                                 showing 1 results
                             </div>
@@ -332,16 +332,16 @@
                             <div class="row mt-4 pb-2 d-flex border-bottom">
                                 <div class="col-6">
                                     <div>
-                                        <div class="">15MIN PER MINUTES SALARY AND 60MIN. HALF DAY SALARY DEDUCT.</div>
+                                        <div class="">15MIN PER MINUTES SALARY AND 60MIN. HALF DAY SALARY DEDUCT</div>
                                     </div>
                                 </div>
                                 <div class="col-3">
-                                    <div>9 <span class="text-primary">edit staff</span></div>
+                                    <div>9 <a href="hr_edit_late_entry.html">edit staff</a></div>
                                 </div>
                                 <div class="col-2">
                                     <div>15 min</div>
                                 </div>
-                                <div class="col-1">
+                                <div class="col-1 justify-content-end text-right">
                                     <a href="hr_edit_late_entry.html">
                                         <i data-feather="more-vertical"></i>
                                     </a>
