--- a/hr_shift_setting.html
+++ b/hr_shift_setting.html
@@ -294,7 +294,7 @@
                                 </div>
                             </div>
                             <div class="col-6  d-flex justify-content-end align-items-right">
-                                <a href="hr_add_leave_template.html">
+                                <a href="hr_shift_add.html">
                                     <button class="btn btn-pill btn-primary">Add Shift</button>
                                 </a>
                             </div>
@@ -307,14 +307,11 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="row align-items-center d-flex">
-                                <h4 class="col-2 fs-6 font-weight-bold text-dark">General shift (9:00 AM to 7:00 PM)</h4>
-                                <div class="col-2 fs-6"></div>
+                                <h4 class="col-6 fs-6 font-weight-bold text-dark">General shift (9:00 AM to 7:00 PM)</h4>
                                 <div class="col-2"><span class="bg-light btn-pill text-dark px-2 py-1">9:00 AM to 7:00 PM</span></div>
-                                <div class="col-2"><span class="bg-light btn-pill text-dark px-2 py-1">Applied to 12 Staff(s)</span></div>
-                                <div class="col-2 fs-6">
-                                    
-                                </div>
-                                <div class="col-2 fs-6">
+                                <div class="col-3"><span class="bg-light btn-pill text-dark px-2 py-1">Applied to 12 Staff(s)</span></div>
+                                
+                                <div class="col-1 fs-6 justify-content-end text-right">
                                     <a href="hr_shift_edit.html">
                                         <i data-feather="more-vertical"></i>
                                     </a>
