--- a/hr_staffProfile.html
+++ b/hr_staffProfile.html
@@ -348,6 +348,12 @@
                                                                         <span class="f-w-600">Manoj Vyas</span>
                                                                     </div>
                                                                 </div>
+                                                                <div class="col-sm-3 mb-3">
+                                                                    <div>
+                                                                        <span class="text-secondary">Center</span><br>
+                                                                        <span class="f-w-600">Mehsana</span>
+                                                                    </div>
+                                                                </div>
                                                             </div>
                                                         </div>
                                                         <!-- Profile Information Section -->
@@ -357,7 +363,7 @@
                                                                     <h5 class="f-w-700">Profile Information</h5>
                                                                 </div>
                                                                 <div class="col-3 d-flex justify-content-end">
-                                                                    <a>
+                                                                    <a href="hr_editStaff.html">
                                                                         <button
                                                                             class="btn btn-pill btn-light mx-2 text-primary">
                                                                             <i class="icondt text-primary fa fa-pen"
@@ -412,6 +418,13 @@
                                                                         <span class="f-w-600">-</span>
                                                                     </div>
                                                                 </div>
+                                                                <div class="col-sm-3 mb-3">
+                                                                    <div>
+                                                                        <span class="text-secondary">Center
+                                                                            </span><br>
+                                                                        <span class="f-w-600">Mehsana</span>
+                                                                    </div>
+                                                                </div>
                                                             </div>
                                                         </div>
 
@@ -422,7 +435,7 @@
                                                                     <h5 class="f-w-700">General Information</h5>
                                                                 </div>
                                                                 <div class="col-3 d-flex justify-content-end">
-                                                                    <a href="hr_addStaff.html">
+                                                                    <a href="hr_editStaff.html">
                                                                         <button
                                                                             class="btn btn-pill btn-light mx-2 text-primary">
                                                                             <i class="icondt text-primary fa fa-pen"
@@ -490,7 +503,7 @@
                                                                     <h5 class="f-w-700">Personal Information</h5>
                                                                 </div>
                                                                 <div class="col-3 d-flex justify-content-end">
-                                                                    <a>
+                                                                    <a href="hr_editStaff.html">
                                                                         <button
                                                                             class="btn btn-pill btn-light mx-2 text-primary">
                                                                             <i class="icondt text-primary fa fa-pen"
@@ -677,7 +690,7 @@
                                                                     <h5 class="f-w-700">Employment Information</h5>
                                                                 </div>
                                                                 <div class="col-3 d-flex justify-content-end">
-                                                                    <a href="hr_addStaff.html">
+                                                                    <a href="hr_editStaff.html">
                                                                         <button
                                                                             class="btn btn-pill btn-light mx-2 text-primary">
                                                                             <i class="icondt text-primary fa fa-pen"
