--- a/hr_edit_leave_template.html
+++ b/hr_edit_leave_template.html
@@ -319,8 +319,8 @@
                                     <div class="card">
                                         <div class="card-body">
                                             <div class="">
-                                                <div class="row border-bottom mt-2">
-                                                    <div class="col-6">
+                                                <div class="row mt-2">
+                                                    <div class="col-4">
                                                         <h6 class="f-w-600">Template Name</h6>
                                                     </div>
                                                     <div class="col-3">
@@ -329,8 +329,8 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="row border-bottom mt-4 pb-4">
-                                                    <div class="col-6">
+                                                <div class="row mt-4 pb-4">
+                                                    <div class="col-4">
                                                         <h6 class="f-w-600">Leave Policy Cycle</h6>
                                                     </div>
                                                     <div class="col-3">
@@ -338,7 +338,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="row mt-4 pb-1">
-                                                    <div class="col-6">
+                                                    <div class="col-4">
                                                         <h6 class="f-w-600">Sandwich Leaves</h6>
                                                     </div>
                                                     <div class="col-6">
@@ -346,6 +346,16 @@
                                                             <button type="button" class="btn btn-outline-primary">Count</button>
                                                             <button type="button" class="btn btn-outline-primary">Ignore</button>
                                                         </div>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-6">
+                                                        
+                                                    </div>
+                                                    <div class="col-6  d-flex justify-content-end align-items-right">
+                                                        <a>
+                                                            <button class="btn btn-pill btn-primary">Edit</button>
+                                                        </a>
                                                     </div>
                                                 </div>
                                             </div>
