--- a/hr_shift_edit.html
+++ b/hr_shift_edit.html
@@ -345,11 +345,21 @@
                             <div class="row align-items-center d-flex">
                                 <h6 class="col-2">Unpaid Break</h6>
                                 <div class="col-2">
-                                    <button class="btn btn-pill btn-primary">
+                                    <button class="btn btn-pill btn-light">
                                         Add
                                     </button>
                                 </div>
 
+                            </div>
+                            <div class="row">
+                                <div class="col-6">
+                                    
+                                </div>
+                                <div class="col-6  d-flex justify-content-end align-items-right">
+                                    <a>
+                                        <button class="btn btn-pill btn-primary">Edit</button>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -636,6 +646,7 @@
         $(this).toggleClass('rotate');
       });
     });
+    
     </script>
     <!-- login js-->
     <!-- Plugin used-->
